Create Service and incident updates endpoints
